// Vitest Snapshot v1

exports[`ProgressiveImage > load placeholder image regardless of intersection 1`] = `
<div
  class="v-progressive-image"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <img
      class="v-progressive-image-main"
      style="display: none;"
    />
    <transition-stub>
      <img
        class="v-progressive-image-placeholder"
        loading="eager"
        src="placeholder-image.jpg"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > preload placeholder image regardless of intersection 1`] = `
<div
  class="v-progressive-image"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <img
      class="v-progressive-image-main"
      style="display: none;"
    />
    <transition-stub>
      <img
        class="v-progressive-image-placeholder"
        loading="eager"
        src="placeholder-image.jpg"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > render default slot 1`] = `
<div
  class="v-progressive-image"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <img
      class="v-progressive-image-main"
      src="main-image.jpg"
      style="display: none;"
    />
    <!--v-if-->
    <div
      class="v-progressive-image-slot-default"
    >
      
      <div>
        lorem ipsum
      </div>
      
    </div>
  </div>
</div>
`;

exports[`ProgressiveImage > render default slot props 1`] = `
<div
  class="v-progressive-image"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <img
      class="v-progressive-image-main"
      src="main-image.jpg"
      style="display: none;"
    />
    <!--v-if-->
    <div
      class="v-progressive-image-slot-default"
    >
      
      {
  "isLoading": true
}
      
    </div>
  </div>
</div>
`;

exports[`ProgressiveImage > render image 1`] = `
<div
  class="v-progressive-image"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <img
      class="v-progressive-image-main"
      src="main-image.jpg"
      style="display: none;"
    />
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > render image with placeholder 1`] = `
<div
  class="v-progressive-image"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <img
      class="v-progressive-image-main"
      src="main-image.jpg"
      style="display: none;"
    />
    <transition-stub>
      <img
        class="v-progressive-image-placeholder"
        loading="lazy"
        src="placeholder-image.jpg"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > use alt attribute 1`] = `
<div
  class="v-progressive-image"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <img
      alt="image description"
      class="v-progressive-image-main"
      src="main-image.jpg"
      style="display: none;"
    />
    <transition-stub>
      <img
        class="v-progressive-image-placeholder"
        loading="lazy"
        src="placeholder-image.jpg"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > use custom blur 1`] = `
<div
  class="v-progressive-image"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <img
      class="v-progressive-image-main"
      src="main-image.jpg"
      style="display: none;"
    />
    <transition-stub>
      <img
        class="v-progressive-image-placeholder"
        loading="lazy"
        src="placeholder-image.jpg"
        style="--blur: 50px;"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > use object cover 1`] = `
<div
  class="v-progressive-image v-progressive-image-object-cover"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <img
      class="v-progressive-image-main"
      src="main-image.jpg"
      style="display: none;"
    />
    <transition-stub>
      <img
        class="v-progressive-image-placeholder"
        loading="lazy"
        src="placeholder-image.jpg"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;
